<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/sort_name"
            android:checked="true"
            android:title="@string/sort_name" />
        <item
            android:id="@+id/sort_name_inverse"
            android:title="@string/sort_name_inverse" />
        <item
            android:id="@+id/sort_date"
            android:title="@string/sort_date" />
        <item
            android:id="@+id/sort_date_inverse"
            android:title="@string/sort_date_inverse" />
        <item
            android:id="@+id/sort_size"
            android:title="@string/sort_size" />
        <item
            android:id="@+id/sort_size_inverse"
            android:title="@string/sort_size_inverse" />
    </group>
</menu>
