<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorStatus">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal"
            app:layout_scrollFlags="scroll|enterAlways|snap">


            <ImageButton
                android:id="@+id/action_home"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@null"
                android:padding="8dp"
                android:src="@drawable/home_outline"/>


            <TextView
                android:id="@+id/action_browser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:drawablePadding="8dp"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="?android:textColorPrimary" />

            <ImageButton
                android:id="@+id/action_daemon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/server_mode"
                android:padding="8dp"
                android:src="@drawable/access_point_network" />


            <ImageButton
                android:id="@+id/action_bookmark"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/bookmark"
                android:padding="8dp"
                android:src="@drawable/star_outline" />

            <ImageButton
                android:id="@+id/action_bookmarks"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/bookmarks"
                android:padding="8dp"
                android:src="@drawable/bookmark_multiple_outline" />

            <ImageButton
                android:id="@+id/action_overflow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@null"
                android:padding="8dp"
                android:src="@drawable/dots_vertical" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:contentDescription="@null"
        app:fabSize="normal"
        app:layout_behavior="threads.server.utils.FloatingButtonBehavior"
        app:tint="@android:color/white"
        app:srcCompat="@drawable/plus_thick"
        app:useCompatPadding="true" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>

